Fix some UI bugs and change verbiage

--- a/chrome/src/templates/admin/preferences.html
+++ b/chrome/src/templates/admin/preferences.html
@@ -2,7 +2,7 @@
 <ul class="toggles">
   <li>
     <input id="c1" type="checkbox" rv-checked="enableKeybase" rv-on-change="toggle"/></dt>
-    <label for="c1">Allow browser popup to search for public keys in <a target="_new" href="https://keybase.io">Keybase</a> (Experimental!)</label>
+    <label for="c1">Search for public keys also in <a target="_new" href="https://keybase.io">Keybase</a> (Experimental!)</label>
   </li>
   <li>
     <input id="c2" type="checkbox" rv-checked="allowCollectData" rv-on-change="toggle"/>
